# zulip-log-viewer

./: Makefile  README.md  run.sh  zulip_log_viewer.opam
src/: dune  zulip_log_view.ml
